--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,7 +17,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Energy Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+<meta name="keywords" content="Energy Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <link href='http://fonts.googleapis.com/css?family=Montserrat|Raleway:400,200,300,500,600,700,800,900,100' rel='stylesheet' type='text/css'>
@@ -28,7 +28,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--/script-->
 <script type="text/javascript">
 			jQuery(document).ready(function($) {
-				$(".scroll").click(function(event){		
+				$(".scroll").click(function(event){
 					event.preventDefault();
 					$('html,body').animate({scrollTop:$(this.hash).offset().top},900);
 				});
@@ -43,46 +43,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	 <div class="container">
 		 <div class="header">
 				<div class="col-md-4 head-logo">
-				 	<h1><a href="index.html"><img src="images/engry.png" alt=""/>ENERGY</a></h1>
+				 	<h1><a href="index.html"><img src="images/engry.png" alt=""/>QUO VADIS</a></h1>
 				</div>
-				<div class="col-md-4 search">					
-				    <form>
-					<input type="text" value="" placeholder="Search...">
-					<input type="submit" value="">
-					</form>					
-				</div>
-				<div class="col-md-4 social">
-				   <ul>
-						<li><a href="#"><i class="facebook"></i></a></li>
-						<li><a href="#"><i class="twitter"></i></a></li>
-						<li><a href="#"><i class="dribble"></i></a></li>	
-						<li><a href="#"><i class="google"></i></a></li>										
-				  </ul>
-				</div>
-				<div class="clearfix"> </div>
-		 </div>
-		 <div class="top-menu">
+				 <div class="col-md-20 top-menu">
 			 <span class="menu"><img src="images/nav-icon.png"></span>
 			 <ul>
 					 <li class="active"><a href="index.html" class="scroll">Home</a></li>
-					 <li><a class="scroll" href="#about">About</a></li>	
+					 <li><a class="scroll" href="#about">About</a></li>
 					 <li><a class="scroll" href="#services">Service</a></li>
-					 <li><a href="projects.html">Projects</a></li>					 
-					 <li><a href="news.html">News & Events</a></li>	
-                      <li><a href="team.html">Team</a></li>							 
-					 <li><a href="contact.html">Contact</a></li>					 
+                      <li><a href="team.html">Team</a></li>
+					 <li><a href="contact.html">Contact</a></li>
 						<div class="clearfix"></div>
 				 </ul>
 				 <!-- script-for-menu -->
-		 <script>					
+		 <script>
 					$("span.menu").click(function(){
 						$(".top-menu ul").slideToggle("slow" , function(){
 						});
 					});
 		 </script>
-		 <!-- script-for-menu -->	
+		 <!-- script-for-menu -->
 
 		 </div>
+				<div class="clearfix"> </div>
+		 </div>
+
 	 </div>
 	 <!-- //container -->
 	 <div class="container">
@@ -104,32 +89,50 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							  $('.events').append("<li>after event fired.</li>");
 							}
 						  });
-					
+
 						});
 					  </script>
 			<div  id="top" class="callbacks_container">
 				<ul class="rslides" id="slider3">
 					<li>
 						<div class="banner-info">
-								<h3>Lorem ipsum dolor sit,euismod congue vivamus</h3>								
+							<!-- TROVARE AFORISMI SUI VIAGGI  -->
+								<h2>Lorem ipsum dolor sit,euismod congue vivamus</h2>
 								<p>Aenean feugiat mauris sed risus suscipit placerat</p>
 						</div>
 					</li>
 					<li>
 						<div class="banner-info">
-								<h3>Nam et urna interdum blandit cursus vivamus congue</h3>								
+								<h2>Nam et urna interdum blandit cursus vivamus congue</h2>
 								<p>Sed eu quam ut orci ullamcorper tincidunt quam.</p>
 						</div>
 					</li>
 					<li>
 						<div class="banner-info">
-							<h3>Proin tempor bibendum justo a iaculis Suspendisse turpis.</h3>								
+							<h2>Proin tempor bibendum justo a iaculis Suspendisse turpis.</h2>
 							<p>Etiam molestie felis in quam euismod dictum.</p>
 						</div>
 					</li>
 				</ul>
 			</div>
 	 </div>
+	 <br>
+	 <br>
+	 <br>
+	 <br>
+	 <br>
+	 <br>
+	 <br>
+	 <br>
+	 <!-- BARRA DI RICERCA -->
+	 <div class="col-md-4 search">
+				    <form>
+					<input type="text" value="" placeholder="Search...">
+					<input type="submit" value="">
+					</form>
+	</div>
+
+
 </div>
 
 <!-- about -->
@@ -138,37 +141,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 <div class="about-head">
 			 <h3>About Us</h3>
 			 <span></span>
-			 <p>Nulla eget mauris quis elit mollis ornare vitae ut odio. Cras tincidunt, augue vitae sollicitudin commodo, quam elit 
+			 <p>Nulla eget mauris quis elit mollis ornare vitae ut odio. Cras tincidunt, augue vitae sollicitudin commodo, quam elit
 				varius est, et ornare ante massa quis tellus. Mauris nec lacinia nisl. Curabitur tempus tellus et vulputate vestibulum.</p>
 		 </div>
 		 <div class="about-grids">
-			<div class="col-md-4 bottom-grid text-center">				
-					<div class="btm-info">	
+			<div class="col-md-4 bottom-grid text-center">
+					<div class="btm-info">
 						 <div class="icon">
 							<img src="images/ic1.png" alt="">
 						 </div>
 						<h4>Henderit Mauris</h4>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 						sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
 					</div>
 		     </div>
-				<div class="col-md-4 bottom-grid text-center">	
+				<div class="col-md-4 bottom-grid text-center">
 					 <div class="btm-info">
 						<div class="icon">
 							<img src="images/ic2.png" alt="">
-						 </div>					
+						 </div>
 						   <h4>Praesent Vestibut</h4>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 						    sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
-					 </div>					
+					 </div>
 				</div>
-				<div class="col-md-4 bottom-grid text-center">	
+				<div class="col-md-4 bottom-grid text-center">
 					 <div class="btm-info">
 					    <div class="icon">
 							<img src="images/ic3.png" alt="">
-						 </div>							
+						 </div>
 							<h4>Consectetu Bibendum</h4>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, 
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
 						sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
 					   </div>
 				</div>
@@ -176,12 +179,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		   </div>
 		  <div class="about-pics">
 			 <div class="col-md-6 pic-grid">
-				 <img src="images/pic1.jpg" alt=""/>				 
+				 <img src="images/pic1.jpg" alt=""/>
 				 <h4>Industry</h4>
 				 <p>Aenean feugiat mauris sed risus suscipit, eget scelerisque metus placerat Sed eu quam ut orci ullamcorper tincidunt ac ac quam.</p>
 			 </div>
-			  <div class="col-md-6 pic-grid">				 
-				 <img src="images/pic2.jpg" alt=""/>				 
+			  <div class="col-md-6 pic-grid">
+				 <img src="images/pic2.jpg" alt=""/>
 				 <h4>Industry</h4>
 				 <p>Donec congue lacus nec turpis Sed eu quam ut orci ullamcorper tincidunt ac ac quam. condimentum, non imperdiet tellus elementum.</p>
 			 </div>
@@ -195,7 +198,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 <div class="service-head">
 			 <h3>Services</h3>
 			 <span></span>
-			 <p>Nulla eget mauris quis elit mollis ornare vitae ut odio. Cras tincidunt, augue vitae sollicitudin commodo, quam elit 
+			 <p>Nulla eget mauris quis elit mollis ornare vitae ut odio. Cras tincidunt, augue vitae sollicitudin commodo, quam elit
 				varius est, et ornare ante massa quis tellus. Mauris nec lacinia nisl. Curabitur tempus tellus et vulputate vestibulum.</p>
 		 </div>
 		 <div class="service_grids">
@@ -246,42 +249,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		 </div>
 	 </div>
 </div>
-<!--slider-->
-<!----->
- <script>
-    $(function () {
-      $("#slider2").responsiveSlides({
-      	auto: true,
-      	speed: 500,
-        namespace: "callbacks2",
-        pager: true,
-      });
-    });
-  </script>
 
-<div class="slider btm_sld">
-	 <div class="container">
-		 <div class="callbacks2_container">
-			 <ul class="rslides" id="slider2">
-					 <li>						 
-						<p>Curabitur pharetra sed magna at tincidunt. Maecenas auctor tincidunt ex.
-						Aliquam a vestibulum Donec diam ipsum euismod.</p>	   					  
-					 </li>	
-					 <li>						 
-						<p>Fusce erat nibh, ornare et suscipit non, varius a sapien. Donec vel lectus
-						   vitae nibh sodales semper. Donec diam ipsum.</p>	  					  
-					 </li>
-					 <li>						 
-						<p>Proin tincidunt sit amet velit quis dignissim. Donec et odio sed purus tristique
-						 vitae nibh imperdiet diam sed eget metus.</p>	   					  
-					 </li>				
-			 </ul>
-		 </div>
-	 </div>
-</div>
-<!---->
 <div class="products">
-	 <div class="container">		 
+	 <div class="container">
 		 <div class="col-md-8 product-grids">
 			 <h3>Project Construction</h3>
 			 <div class="product-grid">
@@ -314,7 +284,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <li><a href="#">>  &nbsp;&nbsp Lorem ipsum dolor sit amet, consectetur elit.</a></li>
 			 </ul>
 		 </div>
-		 <div class="clearfix"></div>		 
+		 <div class="clearfix"></div>
 	 </div>
 </div>
 <!----- news-letter ----->
@@ -326,19 +296,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					 <div class="head-logo logo">
 						 <h1><a href="index.html"><img src="images/engry.png" alt=""/>ENERGY</a></h1>
 					 </div>
-					 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. 
+					 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
 					 The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
-					 <a class="view" href="#">View ALL ABOUT US <i class="view"></i></a>					 
+					 <a class="view" href="#">View ALL ABOUT US <i class="view"></i></a>
 				</div>
 				<div class="col-md-4 frt-grid2">
 					 <h3>Latest <span>Tweets</span></h3>
 					 <div class="ftr-grid">
-						 <p>It is a long established fact that a 
+						 <p>It is a long established fact that a
 						 reader will be distracted by the of a reader page when at its layout.</p>
 						 <a href="#">1 Hour ago</a>
 					 </div>
 					 <div class="ftr-grid">
-						 <p>It is a long established fact that a 
+						 <p>It is a long established fact that a
 						 reader will be distracted by the of a reader page when at its layout.</p>
 						 <a href="#">2 Hour ago</a>
 					 </div>
@@ -356,7 +326,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!---->
 <div class="copywrite">
-		 <div class="container">		 
+		 <div class="container">
 				 <p>Copyright © 2015 Energy All rights reserved | Design by <a href="http://w3layouts.com" target="_blank">W3layouts</a></p>
 		</div>
 </div>
@@ -368,14 +338,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				containerID: 'toTop', // fading element id
 				containerHoverID: 'toTopHover', // fading element hover id
 				scrollSpeed: 1200,
-				easingType: 'linear' 
+				easingType: 'linear'
 				};
 				*/
 		$().UItoTop({ easingType: 'easeOutQuart' });
 });
 </script>
 <a href="#to-top" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-<!----> 
+<!---->
 
 </body>
 </html>
